[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bandit]
skips = ["B404", "B603"]

# git-cliff ~ https://git-cliff.org/docs/configuration
# with pyproject.toml embedding https://git-cliff.org/docs/integration/python/
[tool.git-cliff.remote.github]
owner = "dupuy"
repo = "reliabot"
# token = ""

[tool.git-cliff.changelog]

# changelog header
header = """
# Changelog\n
This file documents notable changes to Reliabot.\n
It uses the [Keep a Changelog](https://keepachangelog.com/en/1.0.0/) format,
and follows [Semantic Versioning](https://semver.org/spec/v2.0.0.html) for
releases.\n
"""

# template for the changelog body
# https://keats.github.io/tera/docs/#introduction
body = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% if version -%}
    ## [{{ version | trim_start_matches(pat="v") }}] - {{ timestamp | date(format="%Y-%m-%d") }}
{% else -%}
    ## [Unreleased]
{% endif -%}

### Details\n
{% for group, commits in commits | group_by(attribute="group") %}
    #### {{ group | upper_first }}
    {%- for commit in commits %}
        - {{ commit.message | upper_first | trim }}\
            {% if commit.remote.username %} by @{{ commit.remote.username }}{%- endif -%}
            {% if commit.remote.pr_number %} in \
              [#{{ commit.remote.pr_number }}]({{ self::remote_url() }}/pull/{{ commit.remote.pr_number }}) \
            {%- endif -%}
    {% endfor %}
{% endfor %}

{%- if github.contributors | filter(attribute="is_first_time", value=true) | length != 0 %}
  ## New Contributors\n
{%- endif -%}

{% for contributor in github.contributors | filter(attribute="is_first_time", value=true) %}
  * 🧑🏽‍💻 @{{ contributor.username }} made their first contribution ✨
    {%- if contributor.pr_number %} in \
      [#{{ contributor.pr_number }}]({{ self::remote_url() }}/pull/{{ contributor.pr_number }}) \
    {%- endif %}
{%- endfor %}\n
"""

# template for the changelog footer (release diff reference links)
footer = """
{%- macro remote_url() -%}
  https://github.com/{{ remote.github.owner }}/{{ remote.github.repo }}
{%- endmacro -%}

{% for release in releases -%}
    {% if release.version -%}
        {% if release.previous.version -%}
            [{{ release.version | trim_start_matches(pat="v") }}]: \
                {{ self::remote_url() }}/compare/{{ release.previous.version }}..{{ release.version }}
        {% endif -%}
    {% else -%}
        [unreleased]: {{ self::remote_url() }}/compare/{{ release.previous.version }}..HEAD
    {% endif -%}
{% endfor %}
<!-- generated by git-cliff on {{ now() | date(format="%Y-%m-%d") }} -->
"""
# remove the leading and trailing whitespace from the templates
trim = true

[tool.git-cliff.git]
# parse the commits based on https://www.conventionalcommits.org
conventional_commits = true
# filter out the commits that are not conventional
filter_unconventional = true
# process each line of a commit as an individual commit
split_commits = true
# regex for preprocessing the commit messages
commit_preprocessors = [
    # remove issue numbers from commits
    { pattern = '\((\w+\s)?#([0-9]+)\)', replace = "" },
]
# regex for parsing and grouping commits
commit_parsers = [
    { message = "^.*: add", group = "Added 🚀" },
    { message = "^.*: support", group = "Added 🚀" },
    { message = "^.*: remove", group = "Removed 🗑️" },
    { message = "^.*: delete", group = "Removed 🗑️" },
    { message = "^test", group = "Fixed 🛠️" },
    { message = "^fix", group = "Fixed 🛠" },
    { message = "^.*: fix", group = "Fixed 🛠" },
    { message = "^.*", group = "Changed 🔄" },
]
# protect breaking changes from being skipped due to matching a skipping commit_parser
protect_breaking_commits = false
# filter out the commits that are not matched by commit parsers
filter_commits = false
# regex for matching git tags
tag_pattern = "v[0-9].*"
# regex for skipping tags
skip_tags = "-(alpha|beta|rc)"
# sort the tags topologically
topo_order = false
# sort the commits inside sections by oldest/newest order
sort_commits = "newest"

[tool.poetry]
name = "reliabot"
version = "0.3.0"
description = "Maintain GitHub Dependabot configuration."
license = "MIT"
authors = ["Alexander Dupuy <alex@dupuy.us>"]
readme = "README.md"
repository = "https://github.com/dupuy/reliabot"
keywords = [
    "dependabot",
    "dependency-manager",
    "github",
    "pre-commit-hook",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows :: Windows Vista",
    "Operating System :: POSIX",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.10"  # 3.9 end-of-life 2025-11

"ruamel.yaml" = "^0.19.1"

# pyre2 only has wheels for Python 3.6-3.9, otherwise needs a full compiler
# and for more recent Python, build from GitHub, not PyPI.
# NOTE: this is no longer supported as Python >= 3.10 is now required
#pyre2 = { version = "^0.3.6", optional = true }
# pyre2-updated has added support for 3.13 but not 3.14 yet
pyre2-updated = [
  { version = "^0.3.9", python = ">=3.10, <3.14", optional = true },
]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.2"

[tool.poetry.group.fuzz]
optional = true

[tool.poetry.group.fuzz.dependencies]
atheris = "^3.0.0"

[tool.poetry.group.testing]
optional = true

[tool.poetry.group.testing.dependencies]
tox = "^4.46.3"

[tool.poetry.extras]
# NOTE: Original pyre2 no longer supported as Python >= 3.10 is now required
re2 = ["pyre2-updated"]
# Provided for backward compatibility, please use "re2" extra
re2-wheels = ["pyre2-updated"]

# Uncomment when ready to require poetry >= 2.0
# poetry-plugin-export isn't installed by default in poetry >= 2.0
# Unfortunately this requires manual installation with one of:
# - poetry self install poetry-plugin-export
# - pip install poetry-plugin-export
# - pipx inject poetry poetry-plugin-export
# and these tend to conflict with brew- or system-installed python libs,
#[tool.poetry.requires-plugins]
#poetry-plugin-export = ">1.7"

[tool.poetry.scripts]
reliabot = 'reliabot.reliabot:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/dupuy/reliabot/issues"

[tool.pre-commit-update]
keep = ["markdownlint"]  # Compiling for install too slow for pre-commit.ci
verbose = true
warnings = true

[tool.pre-commit-update.yaml]
mapping = 2
offset = 2
sequence = 4

[tool.ruff]
line-length = 79

# By default, always show source code snippets.
output-format = "full"

# Preview formatting conflicts with python-reorder-imports about blank line
# after initial docstring. Hopefully when it is no longer in preview there
# will be some way to disable it.
#preview = true

# Enumerate all fixed violations.
show-fixes = true

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
# Allow en-dash (U+2013), which could be confused for -.
allowed-confusables = ["–"]

# Enabling flake8 -builtins (A), -annotations (ANN), -bugbear (B),
# -comprehensions (C4), -pydocstyle (D), -errmsg (EM), -executable (EXE),
# -future-annotations (FA), -boolean-trap (FBT), -implicit-str-concat (ISC),
# -import-conventions (ICN), -pie (PIE), -quotes (Q), -return (RET),
# -bandit (S), -simplify (SIM), -type-checking (TCH), and -2020 (YTT) in
# addition to flynt (FLY) pep8-naming (N), perflint (PERF), pylint (PL*),
# pyupgrade (UP), and the defaults (E4, E7, E9, F).
# Pycodestyle warnings (W) aren't selected since other pre-commits catch them
# (except for too-noisy W505).
# TODO: "ASYNC", "DTZ", "ERA", "G", "INP", "INT", "LOG", "PTH", "SLOT", & "TRIO"
# (if they become relevant). Also maybe "FURB"
select = [
    "E4", "E7", "E9", "F", "A", "ANN", "B", "C4", "D", "EM", "EXE", "FA", "FBT",
    "ISC", "ICN", "PIE", "Q", "RET", "S", "SIM", "TCH", "YTT",
    "FLY", "N", "PERF", "PL", "UP",
    "RUF",
]
ignore = [
    # "ANN101",  # missing-type-self
    "B028",  # no-explicit-stacklevel
    "D105",  # undocumented-magic-method
    "ISC001",  # single-line-implicit-string-concatenation  # formatter conflict
    "PLR091", # too-many-*  # TODO: reduce complexity or disable with comments
    "PLR2004", # magic-value-comparison
    "S404",  # suspicious-subprocess-import
    "S603",  # subprocess call: check for execution of untrusted input
    # This can be removed and the code fixed as it was already done for Optional[]
    # ruff --fix --unsafe-fixes should do the trick
    "UP007",  # non-pep604-annotation – Use X | Y for type annotations
]

[tool.ruff.lint.flake8-type-checking]
# Add quotes around type annotations, if doing so would allow
# an import to be moved into a type-checking block.
quote-annotations = true

[tool.ruff.lint.pycodestyle]
max-doc-length = 79

[tool.ruff.lint.pydocstyle]
convention = "pep257"
