[metadata]
name = reliabot
version = 0.1.0
description = Maintain GitHub Dependabot configuration.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dupuy/reliabot
author = Alexander Dupuy
author_email = alex@dupuy.us
license = MIT
license_files = LICENSE
keywords =
    dependabot
    git
    github
    pre-commit
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows :: Windows Vista
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Version Control :: Git
    Topic :: System :: Software Distribution
    Topic :: Utilities

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[options]
packages = find:
install_requires =
    ruamel.yaml>=0.17
python_requires = >=3.8

[options.packages.find]
exclude =
    styles

[options.entry_points]
console_scripts =
    reliabot = reliabot.reliabot:main

[testenv]
commands =
    coverage erase
    coverage run reliabot/reliabot.py --self-test
    coverage report --fail-under=85
deps =
    covdefaults
    coverage
    -r reliabot/requirements.txt

[testenv:pre-commit]
commands = pre-commit run --all-files --show-diff-on-failure
deps =
    pre-commit
    -r reliabot/requirements.txt
skip_install = true

[tox:tox]
envlist =
    pre-commit
    py311
    py38
